Wed Jun 13 06:55:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Service_Participant.cpp:
          Fixed warning

Tue Jun 12 21:32:52 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderCallbacks.h:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterCallbacks.h:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/TopicImpl.h:
        * dds/DCPS/TopicImpl.cpp:
        * dds/DdsDcpsInfoUtils.idl:

          Allow a status change for InconsistentTopicStatus.  This will only
          occur with RTPS Discovery because the InfoRepo can enforce that topics
          use the same type name at the time when the topics are created.

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Implement checking for consistent topic types and also enforcing
          RTPS string length limits on topic and type names.  See bugzilla
          bugs #4023 and #4036.

        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.h:
        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.h:
        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Adjusted tests for the above changes.

Tue Jun 12 20:20:59 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          In Service_Participant::shutdown(), handle reactor_
          being null.

Tue Jun 12 18:48:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/DpShutdown/dpshutdown.cpp:
          Fixed compile errors when DDS_HAS_MINIMUM_BIT has been defined

Tue Jun 12 18:41:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/QOS_XML_Handler/QOS_XML_Loader.cpp:
        * dds/DCPS/QOS_XML_Handler/XML_File_Intf.cpp:
          Make all error output dependent on log level
